# Tracers - w1tn3ss Framework Tracers
cmake_minimum_required(VERSION 3.16)

# Add tracer subdirectories
add_subdirectory(w1cov)
add_subdirectory(w1mem)
add_subdirectory(w1trace)
add_subdirectory(w1inst)
add_subdirectory(w1xfer)
add_subdirectory(w1script)
add_subdirectory(gadgetdemo)
add_subdirectory(w1dump)
add_subdirectory(threadtest)
